feat: se refactoriza controladores y se agregan nuevos metodos